unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_User_Requests__c/SDO_SCOM_OOA_Commerce_User_Requests__c.object-meta.xml
<CustomObject>
    <label>Commerce User Request</label>
    <nameField>
        <displayFormat>CUR-{0000}</displayFormat>
        <label>Commerce User Requests No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce User Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>