unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_User_Requests__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commerce User Requests</relationshipLabel>
    <relationshipName>Commerce_User_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>