unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_User_Requests__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email domain must match on list.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>