unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_User_Requests__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone</label>
    <type>Phone</type>
</CustomField>