unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_User_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>